--- a/src/views/calves.handlebars
+++ b/src/views/calves.handlebars
@@ -7,7 +7,9 @@
 </nav>
 
 <div class="main-treatment-container">
-<h3>Terneros en tratamiento</h3>
+<div class="title">
+<h2>Terneros en tratamiento que no fueron tratados hoy</h2>
+</div>
 
 {{#each calves}}
     <div class="treated-container">
