arreglo the reset treatment y corrales

--- a/src/views/corral.handlebars
+++ b/src/views/corral.handlebars
@@ -58,7 +58,7 @@
         {{/if}}
         <h2>Este ternero no fue tratado el dia de hoy ❌</h2>
         <form action="/calf/treated/{{this._id}}" method="POST">
-            <button type="submit" class="link-button">Marcar como tratado hoy</button>
+            <button type="button" class="link-button mark-today-treated" data-id="{{this._id}}">Marcar como tratado hoy</button>
         </form>
     </div>
 {{/each}}
@@ -115,3 +115,5 @@
 {{else}}
 <h1>No se encontro ningun ternero en tratamiento en este corral</h1>
 {{/if}}
+
+<script src="../js/isTreatedForm.js"></script>
