Correciones gramaticales y modificacion de resetTreatment

--- a/src/views/addcalf.handlebars
+++ b/src/views/addcalf.handlebars
@@ -2,16 +2,17 @@
 
 <nav>
     <a href="/home" class="link-button">Volver al inicio</a>
+    <a href="/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
+    <a href="/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
     <a href="/terneros" class="link-button">Ver todos los terneros tratados</a>
-
 </nav>
 
 <div class="add-page-buttons">
     <button id="addCalfButton" class="add-page-button">Agregar ternero</button>
     <button id="updateCalfButton" class="add-page-button">Actualizar ternero</button>
     <button id="deleteCalfButton" class="add-page-button">Eliminar ternero</button>
-    <button id="addCorralButton" class="add-page-button">Agregar Corral</button>
-    <button id="deleteCorralButton" class="add-page-button">Eliminar Corral</button>
+    <button id="addCorralButton" class="add-page-button">Agregar corral</button>
+    <button id="deleteCorralButton" class="add-page-button">Eliminar corral</button>
 </div>
 <div class="add-page-buttons">
     <button id="addTreatmentButton" class="add-page-button">Agregar tratamiento</button>
