--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,10 +1,10 @@
 {{>headerlogged}}
 
-<h1>Bienvenido al Establecimiento: {{this.user.farmname}}</h1>
+<h1>Bienvenido al establecimiento: {{this.user.farmname}}</h1>
 <nav class="">
-    <a href="/agregar" class="link-button">Agregar Ternero a tratamiento</a>
+    <a href="/agregar" class="link-button">Agregar ternero a tratamiento</a>
     <a href="/terneros-por-terminar-tratamiento" class="link-button">Ver terneros a finalizar tratamiento</a>
-    <a href="/terneros-en-tratamiento" class="link-button">Ver Terneros en tratamiento</a>
+    <a href="/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
     <a href="/terneros" class="link-button">Ver todos los terneros tratados</a>
 </nav>
 
