--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -10,7 +10,7 @@
 
     <div>
       <span class="input-error">{{errors.password}}</span>
-      <input class="input" autocomplete="off" id="passInput" type="password" placeholder="Contrasena" name="password" required/>
+      <input class="input" autocomplete="off" id="passInput" type="password" placeholder="Contraseña" name="password" required/>
       <div>
       <input type="checkbox" id="showPass">Mostrar contraseña
       </div>
