--- a/src/views/partials/treatment-update.handlebars
+++ b/src/views/partials/treatment-update.handlebars
@@ -1,12 +1,11 @@
 <div id="modifyTreatmentRealTime" class=""></div>
 <div class="form-container">
-  <h1>Nuevo Tratamiento</h1>
+  <h1>Modificar tratamiento</h1>
   <form id="updateTreatmentFormData">
     <select id="nameInputUpdateTreatment" name="treatment" required>
-      <option value="" disabled selected>Seleccionar Tratamiento</option>
+      <option value="" disabled selected>Seleccionar tratamiento</option>
       {{#each treatments}}
         <option
-
           value="{{this.title}}"
           data-duration="{{this.duration}}"
           medication="{{this.medication}}"
@@ -16,15 +15,25 @@
     </select>
 
     <div>
-      <input type="hidden" id="idInputUpdateTreatment">
+      <input type="hidden" id="idInputUpdateTreatment" />
       Medicamentos:
-      <input type="text" id="medicationUpdateTreatment" name="medication" required>
+      <input
+        type="text"
+        id="medicationUpdateTreatment"
+        name="medication"
+        required
+      />
     </div>
     <div>
-      Duración(días en números):
-      <input type="Number" id="durationUpdateTreatment" name="duration" required>
+      Duración (días en números):
+      <input
+        type="Number"
+        id="durationUpdateTreatment"
+        name="duration"
+        required
+      />
     </div>
-   
-    <input class="form-button" type="submit" value="Actualizar tratamiento"/>
+
+    <input class="form-button" type="submit" value="Actualizar tratamiento" />
   </form>
 </div>
