--- a/src/views/partials/calf-delete.handlebars
+++ b/src/views/partials/calf-delete.handlebars
@@ -1,23 +1,26 @@
 <div class="form-container">
   <h1>Eliminar Ternero</h1>
   <form id="deleteCalfFormSubmit">
-  <input type="hidden" id="deleteCalfFormMethod" name="_method" value="DELETE">
-   <div>
-    <p >Nombre del Ternero:</p>
-    <select id="nameDeleteCalf" name="name" required>
-      <option value="" disabled selected>Seleccionar Ternero</option>
-      {{#each calves}}
-        <option
-
+    <input
+      type="hidden"
+      id="deleteCalfFormMethod"
+      name="_method"
+      value="DELETE"
+    />
+    <div>
+      <p>Nombre del ternero:</p>
+      <select id="nameDeleteCalf" name="name" required>
+        <option value="" disabled selected>Seleccionar ternero</option>
+        {{#each calves}}
+          <option
             value="{{this.name}}"
             _id="{{this._id}}"
-     
-        >{{this.name}}</option>
-      {{/each}}
-    </select>
-    <input type="hidden" name="=_id" id="idInputDeleteCalf">
+          >{{this.name}}</option>
+        {{/each}}
+      </select>
+      <input type="hidden" name="=_id" id="idInputDeleteCalf" />
     </div>
 
-    <input class="form-button" type="submit" value="Eliminar Ternero" />
+    <input class="form-button" type="submit" value="Eliminar ternero" />
   </form>
 </div>
