--- a/src/views/partials/corral-form.handlebars
+++ b/src/views/partials/corral-form.handlebars
@@ -1,8 +1,8 @@
 <div class="form-container">
-  <h1>Nuevo Corral</h1>
+  <h1>Nuevo corral</h1>
   <form action="/corral/add" method="post">
-    <label for="title">Nombre del Corral:</label>
+    <label for="title">Nombre del corral:</label>
     <input type="text" id="corral" name="corral" required />
-    <input class="form-button" type="submit" value="Guardar Corral" />
+    <input class="form-button" type="submit" value="Guardar corral" />
   </form>
 </div>
