--- a/src/views/partials/headerlogged.handlebars
+++ b/src/views/partials/headerlogged.handlebars
@@ -1,7 +1,7 @@
 <div class="header-div">
-<div class="headerlogged-div">
-<img class="header-img" src="/img/logo1.jpg" alt="">
-<h1>Cattle Care</h1>
-</div>
-<a href="/login/logout" class="link-button">Cerrar sesion</a>
+  <div class="headerlogged-div">
+    <img class="header-img" src="/img/logo1.jpg" alt="" />
+    <h1>Cattle Care</h1>
+  </div>
+  <a href="/login/logout" class="link-button">Cerrar sesión</a>
 </div>
