--- a/src/views/calves.handlebars
+++ b/src/views/calves.handlebars
@@ -7,9 +7,12 @@
     <a href="/terneros-en-tratamiento" class="link-button">Ver terneros en tratamiento</a>
 </nav>
 
+
+
 <div class="main-treatment-container">
-<div class="title">
-<h2>Terneros en tratamiento que no fueron tratados hoy</h2>
+<div class="title title-calves">
+<h2>Todos los ternenos</h2>
+<a href="/terneros-muertos" class="link-button dead-calves-link">Terneros muertos</a>
 </div>
 
 {{#each calves}}
@@ -41,3 +44,4 @@
     {{/if}}
 </div>
 {{/each}}
+</div>
