--- a/src/views/partials/calf-update.handlebars
+++ b/src/views/partials/calf-update.handlebars
@@ -17,11 +17,28 @@
             duration="{{this.duration}}"
             endDate="{{this.endDate}}"
             _id="{{this._id}}"
+            corralId="{{this.corralId}}"
+            corral="{{this.corral}}"
           >{{this.name}}</option>
         {{/each}}
       </select>
     </div>
     <input type="hidden" name="_id" id="idInputCalf" readonly />
+
+    <div>
+      <p>Corral:</p>
+
+      <select id="corralUpdateCalf" name="corral" required>
+        <option value="" disabled selected>Seleccionar corral</option>
+        {{#each corrals}}
+          <option
+            value="{{this.corral}}"
+            corralId="{{this._id}}"
+          >{{this.corral}}</option>
+        {{/each}}
+      </select>
+      <input type="hidden" name="corralId" id="idInputCorralCalf" readonly />
+    </div>
     <div>
       <p>Fecha de inicio del tratamiento:</p>
       <input type="date" id="startDateUpdateCalf" name="startDate" required />
