dead calves fixed

--- a/src/views/deadCalves.handlebars
+++ b/src/views/deadCalves.handlebars
@@ -41,7 +41,7 @@
             <p class="treatment">        
             Tratamiento: {{this.treatment}}
             </p>   
-            <p>Este ternero murio el día: {{{formatDate this.timeDate}}}</p>
+            <p>Este ternero murio el día: {{{formatDate this.timeDead}}}</p>
         </div>
         {{#if this.comment}}
         <div>
